--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Csa</title>
+  <title>UMD CSA</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	        <span class="sr-only">Toggle navigation</span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	      </button>
+	      <a class="navbar-brand" href="#">
+	      	<%= image_tag('logo.png', size: '80x80') %>
+	      </a>
+	    </div>
+	    <div class = "collapse navbar-collapse" id="bs-example-navbar-collpase-1">
+	    	<ul class="nav navbar-nav navbar-right">
+	    		<li><a href="#">About</a></li>
+	    		<li><a href="#">Events</a></li>
+	    		<li><a href="#">Contact</a></li>
+	    	</ul>
+	    </div>
+	 </div>
+</nav>
 <%= yield %>
 
 </body>
