--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,13 +21,12 @@
 	      	<%= image_tag('logo.png', size: '80x80') %>
 	      </a>
 	    </div>
-	    <div class = "collapse navbar-collapse" id="bs-example-navbar-collpase-1">
-	    	<ul class="nav navbar-nav navbar-right">
-	    		<li><a href="#">About</a></li>
-	    		<li><a href="#">Events</a></li>
-	    		<li><a href="#">Contact</a></li>
-	    	</ul>
-	    </div>
+	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	      <ul class="nav navbar-nav navbar-right">
+	        <li><a href="#">About</a></li>
+	       	<li><a href="#">Events</a></li>
+	      </ul>
+	    </div><!-- /.navbar-collapse -->
 	 </div>
 </nav>
 <%= yield %>
