--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -16,17 +16,17 @@
 
 @font-face 
 	font-family: 'OpenSans'
-	src: url('OpenSans-Regular.ttf')
+	src: url('../fonts/OpenSans-Regular.ttf')
 	font-weight: normal
 	font-style: normal
 @font-face
 	font-family: 'OpenSans'
-	src: url('OpenSans-Bold.ttf')
+	src: url('../fonts/OpenSans-Bold.ttf')
 	font-weight: bold
 	font-style: normal		
 @font-face
 	font-family: 'OpenSans'
-	src: url('OpenSans-Semibold.ttf')
+	src: url('../fonts/OpenSans-Semibold.ttf')
 	font-weight: semibold
 	font-style: normal	
 @import "bootstrap-sprockets"
