--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -14,24 +14,10 @@
  *= require_tree .
  */
 
-@font-face 
-	font-family: 'OpenSans'
-	src: url('../fonts/OpenSans-Regular.ttf')
-	font-weight: normal
-	font-style: normal
-@font-face
-	font-family: 'OpenSans'
-	src: url('../fonts/OpenSans-Bold.ttf')
-	font-weight: bold
-	font-style: normal		
-@font-face
-	font-family: 'OpenSans'
-	src: url('../fonts/OpenSans-Semibold.ttf')
-	font-weight: semibold
-	font-style: normal	
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700)
 @import "bootstrap-sprockets"
 $navbar-default-bg: transparent
 $navbar-height: 100px
-$font-family-sans-serif: 'OpenSans' !default
+$font-family-sans-serif: 'OpenSans', sans-serif
 @import "bootstrap"
 
