--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -39,7 +39,8 @@ div#welcome_intro {
 	}
 	h3 {
 		font-size: 40px;
-		margin-bottom: 0;		
+		margin-bottom: 0;
+		display: none;		
 	}
 	h1 {
 		font-weight: bold;
