--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -16,8 +16,8 @@ ul, li, p, a {
 }
 .navbar-default .navbar-nav li{
 	a {
-		font-weight: semibold;
-		font-size: 24px;
+		font-weight: 600;
+		font-size: 20px;
 		color: #FFFFFF;
 	}
 	a:hover {
@@ -43,7 +43,7 @@ div#welcome_intro {
 		display: none;		
 	}
 	h1 {
-		font-weight: bold;
+		font-weight: 700;
 		font-size: 72px;
 		text-decoration: underline;
 		margin-top: -5px;
