--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,8 @@
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="#">About</a></li>
 	       	<li><a href="#">Events</a></li>
+	       	<li><a href="#">Contact</a></li>
+	       	<li><a href="#">Sign up</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	 </div>
