--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,12 +4,12 @@
 
 html {
 
-	background: image-url('home_background.jpg') no-repeat center center fixed;
+	/*background: image-url('home_background.jpg') no-repeat center center fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	  -o-background-size: cover;
 	  background-size: cover;
-	background-color: transparent;
+	background-color: transparent;*/
 }
 
 .navbar-default .navbar-nav li{
