change relative paths

--- a/app/assets/javascripts/static_pages.coffee.erb
+++ b/app/assets/javascripts/static_pages.coffee.erb
@@ -11,8 +11,8 @@ $ ->
 
 		# autoplay: false,
 		slides: [
-			{src: '/assets/home_background.jpg'}
-			{src: '/assets/background_2.jpg'}
-			{src: '/assets/background_3.jpg'}
+			{src: '<%= asset_path('home_background.jpg')%>'}
+			{src: '<%= asset_path('background_2.jpg')%>'}
+			{src: '<%= asset_path('background_3.jpg')%>'}
 		],
 		# transition: 'slideLeft'
