--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 	<div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuBar">
 	        <span class="sr-only">Toggle navigation</span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
@@ -21,7 +21,7 @@
 	      	<%= image_tag('logo.png', size: '80x80') %>
 	      </a>
 	    </div>
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+	    <div class="collapse navbar-collapse" id="menuBar">
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="#">About</a></li>
 	       	<li><a href="#">Events</a></li>
