changed slideshow to 5 seconds

--- a/app/assets/javascripts/static_pages.coffee.erb
+++ b/app/assets/javascripts/static_pages.coffee.erb
@@ -8,7 +8,7 @@ $ ->
 
 	$('body').vegas
 		timer: false,
-		
+		transitionDuration: 500,
 		# autoplay: false,
 		slides: [
 			{src: '<%= asset_path('home_background.jpg')%>'}
