--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-inverse" id="otherPagesBar">
 	<div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
 	    <div class="navbar-header">
@@ -17,20 +17,23 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">
+	      <a class="navbar-brand" href="/">
 	      	<%= image_tag('logo.png', size: '80x80') %>
 	      </a>
 	    </div>
 	    <div class="collapse navbar-collapse" id="menuBar">
 	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="#">About</a></li>
-	       	<li><a href="#">Events</a></li>
-	       	<li><a href="#">Contact</a></li>
-	       	<li><a href="#">Sign up</a></li>
+	        <li><a href="/about">About</a></li>
+	       	<li><a href="/events">Events</a></li>
+	       	<li><a href="/contact">Contact</a></li>
+	       	<li><a href="/signup">Sign up</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	 </div>
 </nav>
+<div class="jumbotron">
+	<%= image_tag('aboutBG.jpg',:class => "img-responsive") %>
+</div>
 <%= yield %>
 
 </body>
