--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body id="homePage">
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -17,16 +17,16 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand" href="#">
+	      <a class="navbar-brand" href="/">
 	      	<%= image_tag('logo.png', size: '80x80') %>
 	      </a>
 	    </div>
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav navbar-right">
 	        <li><a href="/about">About</a></li>
-	       	<li><a href="#">Events</a></li>
-	       	<li><a href="#">Contact</a></li>
-	       	<li><a href="#">Sign up</a></li>
+	       	<li><a href="/events">Events</a></li>
+	       	<li><a href="/contact">Contact</a></li>
+	       	<li><a href="/signup">Sign up</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	 </div>
