--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -26,7 +26,7 @@
 	        <li><a href="/about">About</a></li>
 	       	<li><a href="/events">Events</a></li>
 	       	<li><a href="/contact">Contact</a></li>
-	       	<li><a href="/signup">Sign up</a></li>
+	       	<li><a href="/register">Sign up</a></li>
 	      </ul>
 	    </div><!-- /.navbar-collapse -->
 	 </div>
