basic angular init done

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,7 @@
-<h1>StaticPages#about</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
+<div id="descriptionUs">
+<h1>About Us</h1>
+<p>We are University of Maryland's chapter of the Chinese Student Association. Blah blah blah. Click on each of the faces to learn more about the E-Board!</p>
+</div>
+<div id="officerPictures" ng-app="officers" ng-controller="officerCtrl">
+	{{test}}
+</div>
