officer faces done

--- a/app/assets/javascripts/officers.coffee.erb
+++ b/app/assets/javascripts/officers.coffee.erb
@@ -1,7 +1,11 @@
 # Contains the Angular code for the officer page -> will generate all the pictures and modals based on info through JSON file
 angular.module('officers',[]).controller 'officerCtrl', [
 	'$scope'
-	($scope) ->
-		$scope.test = 'Hello World!'
+	'$http'
+	($scope, $http) ->
+		$http.get('./officers.json').success (data) ->	
+			console.log(data)
+			$scope.officersGroup = data	
+			console.log($scope.officersGroup)	
 		return
 ]
