--- a/app/assets/javascripts/static_pages.coffee.erb
+++ b/app/assets/javascripts/static_pages.coffee.erb
@@ -20,7 +20,8 @@ ready = ->
 			{src: '<%= asset_path('background_3.jpg')%>'}
 		]
 
-
+	# $(document).on 'click', '.officerPics img', ->
+	# 	alert 'Yo!'
 # turbolinks treats everything like a single page -> compatible with regular page load and click links
 $(document).ready ready
 $(document).on 'page:load', ready
