--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -37,29 +37,44 @@ div.jumbotron {
 }
 
 div#content {
-	width: 960px;
+	max-width: 960px;
 	margin: 0 auto;
 	div#descriptionUs {
 		border-bottom: 1px dotted #000;
 		margin-bottom: 20px;
 	}
-	div#officerPics {
-		// width: 480;
-		margin-left: 0;
-		// display: inline;
-		div.officer {
-			display: inline;
-			img {
-				height: 140px;
-				width: 140px;
-				margin-bottom: 10px;
-				margin-right: 10px;
-				cursor: move;
+	div#officersPage {
+		
+		// margin: 0 auto;
+		div#officerPics {
+			width: 500px;
+			// margin-left: 0;
+			// padding-right: 0;
+			// border-right: 1px dotted #E8E8E8;
+			div.officer {
+				display: inline;
+				img {
+					height: 140px;
+					width: 140px;
+					margin-bottom: 10px;
+					margin-right: 10px;
+					cursor: move;
+				}
+				div.description {
+					display: none;
+				}
 			}
-			div.description {
-				display: none;
+
+		}
+		div#moreDetails {
+			max-height: 450px;
+			margin-left: 0;
+			
+			img {							
+				max-width: 400px;
+				max-height: 400px;
+				margin: 0 auto;
 			}
 		}
-
 	}
 }
