--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -11,6 +11,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="moreDetails" class="col-md-6">
+	<div id="moreDetails" class="col-md-6 row">
+		
 	</div>
 </div>
