--- a/app/views/static_pages/events.html.erb
+++ b/app/views/static_pages/events.html.erb
@@ -1,1 +1,6 @@
-static_pages#events
+<div class="title">
+<h1>Events</h1>
+</div>
+<div id="calendar" class="responsive-iframe-container big-container">
+<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;src=csaumcp%40gmail.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+</div>
