--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -40,7 +40,7 @@ div.jumbotron {
 div#content {
 	max-width: 960px;
 	margin: 0 auto;
-	div#descriptionUs {
+	div.title {
 		border-bottom: 1px dotted #000;
 		margin-bottom: 20px;
 	}
@@ -79,5 +79,37 @@ div#content {
 			max-height: 450px;
 			margin-left: 0;						
 		}
+	}
+}
+
+div#calendar {
+	width: 800px;
+	margin: 0 auto;
+	@media (max-width: 550px) {
+	    .big-container {
+	        display: none;
+	    }
+	}
+	@media (min-width: 550px) {
+	    .small-container {
+	        display: none;
+	    }
+	}
+	/* Responsive iFrame */
+	.responsive-iframe-container {
+	    position: relative;
+	    padding-bottom: 56.25%;
+	    padding-top: 30px;
+	    height: 0;
+	    overflow: hidden;
+	}
+	.responsive-iframe-container iframe,   
+	.vresponsive-iframe-container object,  
+	.vresponsive-iframe-container embed {
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    width: 100%;
+	    height: 100%;
 	}
 }
