--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,5 @@
-<div id="descriptionUs">
+<div class="title">
 <h1>About Us</h1>
-
 </div>
 <div id="officersPage" class="row" ng-app="officersApp" ng-controller="officerCtrl">
 	<div id="moreDetails" class="col-md-6 row">
