--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>UMD CSA</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag    'index', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
