all pages basic done

--- a/app/assets/javascripts/static_pages.coffee.erb
+++ b/app/assets/javascripts/static_pages.coffee.erb
@@ -19,7 +19,8 @@ ready = ->
 			{src: '<%= asset_path('background_2.jpg')%>'}
 			{src: '<%= asset_path('background_3.jpg')%>'}
 		]
-
+	$('#welcome').fitText()
+	$('#csa').fitText()
 	# $(document).on 'click', '.officerPics img', ->
 	# 	alert 'Yo!'
 # turbolinks treats everything like a single page -> compatible with regular page load and click links
