--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -11,11 +11,14 @@ html {
 	  background-size: cover;
 	background-color: transparent;*/
 	width: 100%;
+	overflow-x: hidden;
 }
-
+div.navbar-header {
+	padding-left: 10px;
+}
 .navbar-brand {
 	padding-top: 5px;
-	padding-bottom: 0;
+	padding-bottom: 0;	
 }
 nav#otherPagesBar {
 	
@@ -29,6 +32,11 @@ nav#otherPagesBar {
 		transition: color 1s;
 	}
 }
+div.container-fluid {
+	padding-left: 0;
+	padding-right: 0;
+	margin: 0;
+}
 div.jumbotron {
 	padding: 0;
 	img {
@@ -38,8 +46,10 @@ div.jumbotron {
 }
 
 div#content {
-	max-width: 960px;
+	max-width: 930px;
 	margin: 0 auto;
+	padding-right: 10px;
+	padding-left: 5px;
 	div.title {
 		border-bottom: 1px dotted #000;
 		margin-bottom: 20px;
@@ -48,7 +58,7 @@ div#content {
 		
 		// margin: 0 auto;
 		div#officerPics {
-			width: 500px;
+			// width: 500px;
 			// margin-left: 0;
 			// padding-right: 0;
 			// border-left: 1px solid #949494;
@@ -57,8 +67,8 @@ div#content {
 				img {
 					height: 140px;
 					width: 140px;
-					margin-bottom: 10px;
-					margin-right: 10px;
+					margin-bottom: 5px;
+					margin-right: 5px;
 					cursor: move;
 				}
 				div.description {
@@ -85,31 +95,12 @@ div#content {
 div#calendar {
 	width: 800px;
 	margin: 0 auto;
-	@media (max-width: 550px) {
-	    .big-container {
-	        display: none;
-	    }
-	}
-	@media (min-width: 550px) {
-	    .small-container {
-	        display: none;
-	    }
-	}
-	/* Responsive iFrame */
-	.responsive-iframe-container {
-	    position: relative;
-	    padding-bottom: 56.25%;
-	    padding-top: 30px;
-	    height: 0;
-	    overflow: hidden;
-	}
-	.responsive-iframe-container iframe,   
-	.vresponsive-iframe-container object,  
-	.vresponsive-iframe-container embed {
-	    position: absolute;
-	    top: 0;
-	    left: 0;
-	    width: 100%;
-	    height: 100%;
-	}
+}
+
+textarea {
+	resize: vertical;
+}
+
+div.selectMenu{
+	padding: 0;
 }
