--- a/app/views/static_pages/events.html.erb
+++ b/app/views/static_pages/events.html.erb
@@ -2,6 +2,5 @@
 <h1>Events</h1>
 <p>We will be updating this calendar with upcoming CSA events. Hope to see you there!</p>
 </div>
-<div id="calendar" class="embed-responsive embed-responsive-4by3">
-<iframe class="embed-responsive-item" src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showCalendars=0&amp;src=csaumcp%40gmail.com&ctz=America/New_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<div id="calendar">
 </div>
