--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -20,4 +20,5 @@ $navbar-height: 50px
 $font-family-sans-serif: 'Open Sans', sans-serif
 @import "bootstrap"
 @import "vegas"
+@import "fullcalendar"
 @import "static_pages"
