--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -3,9 +3,35 @@
   <p>Got a burning question? Fill out this form and we'll get back to you soon!</p>
 </div>
 
-= form_for 
+<%= form_for :contact do |f| %>
+  First name
+  <br/>
+  <%= f.text_field :first_name, :required => true %>
+  <br/>
+  Last name
+  <br/>
+  <%= f.text_field :last_name, :required => true %>
+  <br/>
+  Email
+  <br/>
+  <%= f.email_field :email, :required => true %>
+  <br/>
+  Company Name
+  <br/>
+  <%= f.text_field :company_name %>
+  <br/>
+  Job Title
+  <br/>
+  <%= f.text_field :job_title %>
+  <br/>
+  Question
+  <br/>
+  <%= f.text_field :question, :required => true %>
+  <br/>
+  <%= f.submit "Send" %>
+<% end %>
 
-<form class="form-horizontal">
+<!-- <form class="form-horizontal">
   <div class="form-group">
     <label for="name" class="col-sm-2">Name:</label>
     <div class="col-sm-10">
@@ -29,4 +55,4 @@
         <button type="submit" class="btn btn-default"> <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Send!</button>
       </div>
     </div>
-</form>
+</form> -->
