calendar email changed to csacollegepark@gmail.com

--- a/app/assets/javascripts/static_pages.coffee.erb
+++ b/app/assets/javascripts/static_pages.coffee.erb
@@ -24,9 +24,9 @@ ready = ->
 	# $(document).on 'click', '.officerPics img', ->
 	# 	alert 'Yo!'
 	$('#calendar').fullCalendar 
-		googleCalendarApiKey: 'AIzaSyDDwD24U4FLlYgh6eZQ3OQoa1wBVihSjWs'		
+		googleCalendarApiKey: 'AIzaSyCHI8YwUquGBULKNrqULHiYbN-YMtOOmjo'		
 		events: 
-			googleCalendarId: 'csaumcp@gmail.com'
+			googleCalendarId: '3qeg0ij57jgh6k0crbmccl8q5s@group.calendar.google.com'
 # turbolinks treats everything like a single page -> compatible with regular page load and click links
 $(document).ready ready
 $(document).on 'page:load', ready
