MAILER: Style form and message

--- a/app/views/contact_mailer/contact.html.erb
+++ b/app/views/contact_mailer/contact.html.erb
@@ -1,1 +1,6 @@
-TEST
+<h3> NAME </h3>
+<%= @contact[:first_name] %> <%= @contact[:last_name] %>
+<h3> Email </h3>
+<%= @contact[:email] %>
+<h3> Question </h3>
+<p> <%= @contact[:question] %> </p>
