--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -3,56 +3,32 @@
   <p>Got a burning question? Fill out this form and we'll get back to you soon!</p>
 </div>
 
-<%= form_for :contact do |f| %>
-  First name
-  <br/>
-  <%= f.text_field :first_name, :required => true %>
-  <br/>
-  Last name
-  <br/>
-  <%= f.text_field :last_name, :required => true %>
-  <br/>
-  Email
-  <br/>
-  <%= f.email_field :email, :required => true %>
-  <br/>
-  Company Name
-  <br/>
-  <%= f.text_field :company_name %>
-  <br/>
-  Job Title
-  <br/>
-  <%= f.text_field :job_title %>
-  <br/>
-  Question
-  <br/>
-  <%= f.text_field :question, :required => true %>
-  <br/>
-  <%= f.submit "Send" %>
+<%= form_for(:contact, :html => {:class => "form-horizontal"}) do |f| %>
+  <div class="form-group">
+    <label>First Name:</label>
+    <br/>
+    <%= f.text_field :first_name, :required => true, :class => "form-control", :id => "name", :placeholder => "First Name" %>
+    <br/>
+  </div>
+  <div class="form-group">
+    <label>Last Name</label>
+    <br/>
+    <%= f.text_field :last_name, :class => "form-control", :placeholder => "Last Name" %>
+    <br/>
+  </div>
+  <div class="form-group">
+    <label>Email:</label>
+    <br/>
+    <%= f.email_field :email, :required => true, :class => "form-control", :id => "email", :placeholder => "email@example.com" %>
+    <br/>
+  </div>
+  <div class="form-group">
+    <label>Question:</label>
+    <br/>
+    <%= f.text_area :question, :required => true, :class => "form-control", :id => "message", :rows => "3", :placeholder => "Question"%>
+    <br/>
+  </div>
+  <div class="form-group">
+    <%= f.submit "Submit", :class => "btn btn-red" %>
+  </div>
 <% end %>
-
-<!-- <form class="form-horizontal">
-  <div class="form-group">
-    <label for="name" class="col-sm-2">Name:</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="name" placeholder="Jay Chou"/>
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="email" class="col-sm-2">Email:</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="email" placeholder="jay@jaychou.com" />
-    </div>
-  </div>
-  <div class="form-group">
-    <label for="message" class="col-sm-2">Message: </label>
-    <div class="col-sm-10">
-      <textarea class="form-control" rows="3" id="message" placeholder="Jay send me your autograph please"></textarea>
-    </div>
-  </div>
-  <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-default"> <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Send!</button>
-      </div>
-    </div>
-</form> -->
