--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -5,30 +5,41 @@
 
 <%= form_for(:contact, :html => {:class => "form-horizontal"}) do |f| %>
   <div class="form-group">
-    <label>First Name:</label>
-    <br/>
-    <%= f.text_field :first_name, :required => true, :class => "form-control", :id => "name", :placeholder => "First Name" %>
-    <br/>
+	<label class="col-sm-2 control-label">First Name:</label>
+	<!-- <br/> -->
+	<div class="col-sm-10">
+		<%= f.text_field :first_name, :required => true, :class => "form-control", :id => "name", :placeholder => "First Name" %>
+	</div>
+	<!-- <br/> -->
   </div>
   <div class="form-group">
-    <label>Last Name</label>
-    <br/>
-    <%= f.text_field :last_name, :class => "form-control", :placeholder => "Last Name" %>
-    <br/>
+	<label class="col-sm-2 control-label">Last Name</label>
+	<!-- <br/> -->
+	<div class="col-sm-10">
+		<%= f.text_field :last_name, :class => "form-control", :placeholder => "Last Name" %>
+	</div>
+	<!-- <br/> -->
   </div>
   <div class="form-group">
-    <label>Email:</label>
-    <br/>
-    <%= f.email_field :email, :required => true, :class => "form-control", :id => "email", :placeholder => "email@example.com" %>
-    <br/>
+	<label class="col-sm-2 control-label">Email:</label>
+	<!-- <br/> -->
+	<div class="col-sm-10">
+		<%= f.email_field :email, :required => true, :class => "form-control", :id => "email", :placeholder => "email@example.com" %>
+	</div>
+	<!-- <br/> -->
   </div>
   <div class="form-group">
-    <label>Question:</label>
-    <br/>
-    <%= f.text_area :question, :required => true, :class => "form-control", :id => "message", :rows => "3", :placeholder => "Question"%>
-    <br/>
+	<label class="col-sm-2 control-label">Question:</label>
+	<!-- <br/> -->
+	<div class="col-sm-10">
+		<%= f.text_area :question, :required => true, :class => "form-control", :id => "message", :rows => "3", :placeholder => "Question"%>
+	</div>
+	<!-- <br/> -->
   </div>
   <div class="form-group">
-    <%= f.submit "Submit", :class => "btn btn-red" %>
+	<%= button_tag(type: 'submit', class: "btn btn-red btn-default") do %>
+	 <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Send!
+	<% end %>
+	
   </div>
 <% end %>
