--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -7,7 +7,7 @@
 	</div>
 	<div id="officerPics" class="col-md-6">
 		<div class="officer" ng-repeat="officer in officersGroup">			
-			<%= image_tag('logo.png', :id=>"{{officer.id}}", size: '140x140', :class=>"img-responsive, img-thumbnail", :data=>{:toggle=>"modal", :target=>"##{}{{officer.id}}Modal"}) %>	
+			<img ng-src="/eboard/{{officer.id}}.jpg" id="{{officer.id}}" class="img-responsive, img-thumbnail" data-toggle ="modal" data-target="#{{officer.id}}Modal"/>
 			<!-- <div class="description">
 				{{officer}}
 			</div> -->
@@ -19,16 +19,16 @@
 			        		<h4 class="modal-title" id="myModalLabel">{{officer.name}}, {{officer.role}}</h4>
 			      		</div>
 			      		<div class="modal-body row">
-			      			<div class="col-md-4">
-			      				<%= image_tag('logo.png', size: '140x140', :class=>"img-responsive, img-rounded") %>
+			      			<div class="col-md-4">			      				
+			      				<img ng-src="/eboard/{{officer.id}}.jpg" class="img-responsive, img-thumbnail" />
 			      			</div>
 			      			<div class="col-md-8">
 			      				<p>
-			      					Name: {{officer.name}} <br />
-			      					Position: {{officer.role}} <br />
-			      					Class: {{officer.class}} <br />
-			      					Major: {{officer.major}} <br />
-			      					Fun Fact: {{officer.funFact}} <br />
+			      					<b>Name:</b> {{officer.name}} <br />
+			      					<b>Position:</b> {{officer.role}} <br />
+			      					<b>Class:</b> {{officer.class}} <br />
+			      					<b>Major:</b> {{officer.major}} <br />
+			      					<b>Fun Fact:</b> {{officer.funFact}} <br />
 			      				</p>
 			      			</div>
 			      		</div>
