added in footer, fixed minor padding problems

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,5 +40,10 @@
 		<%= yield %>
 	</div>
 </div>
+<footer class="footer">
+	<div class="container">
+		<p class="text-muted">&copy; UMD Chinese Student Association 2015-2016</p>
+	</div>
+</footer>
 </body>
 </html>
