--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -61,6 +61,9 @@ div#content {
 			text-align: left;
 			padding-left: 0;
 		}
+		div.col-sm-10, div.col-sm-8 {
+			padding-left: 0;
+		}
 	}
 	div#officersPage {
 		
@@ -115,4 +118,14 @@ textarea {
 
 div.selectMenu{
 	padding: 0;
+}
+
+footer {
+	margin-top: 10px;
+	padding-top: 5px;
+	border-top: 1px solid #EDEDED;
+	text-align: center;
+	p.text-muted {
+		color: #B6B6B6;
+	}
 }
