--- a/app/views/static_pages/register.html.erb
+++ b/app/views/static_pages/register.html.erb
@@ -5,20 +5,20 @@
 </div>
 <form class="form-horizontal" id="registerNew">
 	<div class="form-group">
-		<label for="name" class="col-sm-2">Name:</label>
+		<label for="name" class="col-sm-2 control-label">Name:</label>
 		<div class="col-sm-10">
 			<input type="text" class="form-control" id="name" placeholder="Jay Chou"/>
 		</div>
 	</div>
 	<div class="form-group">
-		<label for="email" class="col-sm-2">Email: </label>
+		<label for="email" class="col-sm-2 control-label">Email: </label>
 		<div class="col-sm-10">
 			<input type="email" class="form-control" id="email" placeholder="jay@jaychou.com" />
 		</div>
 	</div>
 	<div class="form-group row">
 		<div class="col-md-6 selectMenu">
-			<label for="shirtSize" class="col-sm-4">Shirt Size:</label>
+			<label for="shirtSize" class="col-sm-4 control-label">Shirt Size:</label>
 			<div class="col-sm-8">
 				<select class="form-control" id="shirtSize">					
 					<option value="s">Small</option>
@@ -29,7 +29,7 @@
 			</div>
 		</div>
 		<div class="col-md-6 selectMenu">
-			<label for="year" class="col-sm-2">Year:</label>
+			<label for="year" class="col-sm-2 control-label">Year:</label>
 			<div class="col-sm-10">
 				<select class="form-control" id="year">
 					<option value="f">Freshmen</option>
