--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -17,19 +17,19 @@
 	<% end %>
 
 	<div class="field form-group">
-		<%= f.label :firstName, :class=>'col-sm-2 control-label' %>
+		<%= f.label :firstName, 'First Name', :class=>'col-sm-2 control-label' %>
 		<div class="col-sm-10">
 			<%= f.text_field :firstName, :class=>"form-control", :placeholder => 'Jay' %>
 		</div>
 	</div>
 	<div class="field form-group">
-		<%= f.label :lastName, :class=>'col-sm-2 control-label' %>
+		<%= f.label :lastName, 'Last Name', :class=>'col-sm-2 control-label' %>
 		<div class="col-sm-10">
 			<%= f.text_field :lastName, :class=>"form-control", :placeholder => 'Chou' %>
 		</div>
 	</div>
 	<div class="field form-group">
-		<%= f.label :email, :class=>'col-sm-2 control-label' %>
+		<%= f.label :email, 'Email', :class=>'col-sm-2 control-label' %>
 		<div class="col-sm-10">
 			<%= f.text_field :email, :class=>"form-control", :placeholder => 'jay@jaychou.com' %>
 		</div>
@@ -37,7 +37,7 @@
 	<!-- <div class="form-group row"> -->
 		<!-- <div class="col-md-6 selectMenu"> -->
 			<div class="field form-group">
-				<%= f.label :shirtSize, :class=>'col-sm-2 control-label' %>
+				<%= f.label :shirtSize, 'Shirt Size', :class=>'col-sm-2 control-label' %>
 				<div class="col-sm-10">          
 					<%= f.select :shirtSize, options_for_select([['Small', 'small'], ['Medium', 'medium'], ['Large', 'large'], ['Do not need one', 'none']], selected: :shirtSize), {}, {:class => 'form-control'} %>
 				</div>
@@ -45,7 +45,7 @@
 		<!-- </div>       -->
 		<!-- <div class="col-md-6 selectMenu"> -->
 			<div class="field form-group">
-				<%= f.label :year, :class=>'col-sm-2 control-label' %>
+				<%= f.label :year, 'Year', :class=>'col-sm-2 control-label' %>
 				<div class="col-sm-10">
 					<!-- <%= f.text_field :year %>-->
 					<%= f.select :year, options_for_select([['Freshmen', 'freshmen'], ['Sophomore', 'sophomore'], ['Junior', 'junior'], ['Senior', 'senior'], ['Super Senior', 'supersenior']], selected: :year),{}, {:class => 'form-control'}  %>
