--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -55,7 +55,9 @@ div#content {
 		border-bottom: 1px dotted #000;
 		margin-bottom: 20px;
 	}
-
+	label.control-label {
+		text-align: left;
+	}
 	div#officersPage {
 		
 		// margin: 0 auto;
