--- a/app/views/contact/new.html.erb
+++ b/app/views/contact/new.html.erb
@@ -37,9 +37,10 @@
 	<!-- <br/> -->
   </div>
   <div class="form-group">
-	<%= button_tag(type: 'submit', class: "btn btn-red btn-default") do %>
-	 <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Send!
-	<% end %>
-	
+  	<div class="col-sm-offset-2 col-sm-10">
+		<%= button_tag(type: 'submit', class: "btn btn-red btn-default") do %>
+		 <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Send!
+		<% end %>
+	</div>
   </div>
 <% end %>
