--- a/app/views/registrations/new.html.erb
+++ b/app/views/registrations/new.html.erb
@@ -19,7 +19,7 @@
 	<div class="field form-group">
 		<%= f.label :firstName, 'First Name', :class=>'col-sm-2 control-label' %>
 		<div class="col-sm-10">
-			<%= f.text_field :firstName, :class=>"form-control", :placeholder => 'Jay' %>
+			<%= f.text_field :firstName, :required=>true, :class=>"form-control", :placeholder => 'Jay' %>
 		</div>
 	</div>
 	<div class="field form-group">
@@ -31,7 +31,7 @@
 	<div class="field form-group">
 		<%= f.label :email, 'Email', :class=>'col-sm-2 control-label' %>
 		<div class="col-sm-10">
-			<%= f.text_field :email, :class=>"form-control", :placeholder => 'jay@jaychou.com' %>
+			<%= f.text_field :email, :required=>true, :class=>"form-control", :placeholder => 'jay@jaychou.com' %>
 		</div>
 	</div>
 	<!-- <div class="form-group row"> -->
