fixed footer position and added social media

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -19,6 +19,8 @@ $navbar-default-bg: transparent
 $navbar-height: 50px
 $font-family-sans-serif: 'Open Sans', sans-serif
 @import "bootstrap"
+@import "font-awesome-sprockets"
+@import "font-awesome"
 @import "vegas"
 @import "fullcalendar"
 @import "static_pages"
