--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -11,7 +11,13 @@ html {
 	  background-size: cover;
 	background-color: transparent;*/
 	width: 100%;
+	position: relative;
+	min-height: 100%;
 	
+}
+$footerHeight: 20px;
+body {
+	margin-bottom: $footerHeight;
 }
 div.navbar-header {
 	padding-left: 10px;
@@ -37,6 +43,9 @@ div.container-fluid {
 	padding-right: 0;
 	margin: 0;
 	overflow-x: hidden;
+}
+div#bodyContent {
+	padding-bottom: 10px;
 }
 div.jumbotron {
 	padding: 0;
@@ -114,12 +123,28 @@ div.selectMenu{
 }
 
 footer {
-	margin-top: 10px;
+	position: absolute;
+	bottom: 0;
+	height: $footerHeight;	
+	margin-top: 15px;
 	padding-top: 5px;
 	border-top: 1px solid #EDEDED;
 	text-align: center;
-	p.text-muted {
-		color: #B6B6B6;
+	min-width: 100%;
+	line-height: $footerHeight;
+	.container {
+		max-width: 960px;
+		margin: 0 auto;
+		p.text-muted {
+			color: #B6B6B6;
+			i.fa {
+				padding-right: 5px;
+				opacity: 0.5;
+			}
+			i.fa:hover {
+				opacity: 1;
+			}
+		}
 	}
 }
 
