base with menu bar done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,28 +10,7 @@
 </head>
 <body>
 <nav class="navbar navbar-default navbar-inverse" id="otherPagesBar">
-	<div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menuBar">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="/">
-	      	<%= image_tag('logo.png', size: '40x40') %>
-	      </a>
-	    </div>
-	    <div class="collapse navbar-collapse" id="menuBar">
-	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="/about">About</a></li>
-	       	<li><a href="/events">Events</a></li>
-	       	<li><a href="/contact">Contact</a></li>
-	       	<li><a href="/register">Sign up</a></li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	 </div>
+	<%= render 'layouts/menu' %>
 </nav>
 <div class="container-fluid" id="bodyContent">
 	<div class="jumbotron">
@@ -52,3 +31,5 @@
 <%= render 'layouts/footer' %>
 </body>
 </html>
+
+kchen@farmersagent.com
