--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -10,28 +10,7 @@
 </head>
 <body id="homePage">
 <nav class="navbar navbar-default">
-	<div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="/">
-	      	<%= image_tag('logo.png', size: '80x80') %>
-	      </a>
-	    </div>
-	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-	      <ul class="nav navbar-nav navbar-right">
-	        <li><a href="/about">About</a></li>
-	       	<li><a href="/events">Events</a></li>
-	       	<li><a href="/contact">Contact</a></li>
-	       	<li><a href="/register">Sign up</a></li>
-	      </ul>
-	    </div><!-- /.navbar-collapse -->
-	 </div>
+	<%= render 'layouts/menu' %>
 </nav>
 <div class="container-fluid">
 <%= yield %>
