--- a/app/views/static_pages/calendar.html.erb
+++ b/app/views/static_pages/calendar.html.erb
@@ -1,5 +1,5 @@
 <div class="title">
-<h1>Events</h1>
+<h1>Calendar</h1>
 <p>We will be updating this calendar with upcoming CSA events. Hope to see you there!</p>
 </div>
 <div id="calendar">
