--- a/app/assets/javascripts/components/officers.coffee.erb
+++ b/app/assets/javascripts/components/officers.coffee.erb
@@ -1,11 +1,39 @@
-OfficerModals = React.createClass
-	# displayName: 'officerModals'
-	render: ->
-		React.DOM.div
-			className: 'photo'
-			React.DOM.h2
-				className: 'officer'
-React.render React.createElement(OfficerModals, {}), $('#officerModals')
-# $(document).ready reactReady
-# $(document).on 'page:change' ->
-# 	React.render React.createElement(officerModals, {}), $('#officerPics')
+
+# data = JSON.parse(jsonData);
+# console.log data
+reactReady = -> 
+    officerModals = React.createClass(
+        displayName: 'officerModals'
+        loadInfoFromFile: ->
+            $.ajax
+              url: @props.url
+              dataType: 'json'
+              cache: false
+              success: ((data) ->
+                @setState data: data.officers                
+                return
+              ).bind(this)
+              error: ((xhr, status, err) ->
+                console.error @props.url, status, err.toString()
+                return
+              ).bind(this)
+            return
+        getInitialState: ->
+            {data: [] }
+        componentDidMount: ->            
+            @loadInfoFromFile()            
+            return
+        render: ->
+            React.createElement 'div', { className: 'photos' }, React.createElement(OfficerPhoto, data: @state.data)
+    )
+    OfficerPhoto = React.createClass(              
+        render: ->
+            officerNodes = @props.data.map((officer, index) ->
+                console.log officer
+            )
+            React.createElement 'div', { className: 'commentList' }, officerNodes 
+    )
+    React.render React.createElement(officerModals, {url: "officers.json"}), $('#officerPics').get 0
+
+$(document).ready reactReady
+$(document).on 'page:load', reactReady
