--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,43 +1,10 @@
 <div class="title">
 <h1>About Us</h1>
 </div>
-<div id="officersPage" class="row" ng-app="officersApp" ng-controller="officerCtrl">
+<div id="officersPage" class="row">
 	<div id="moreDetails" class="col-md-6 row">
 		<p>We are University of Maryland's chapter of the Chinese Student Association. Blah blah blah. Click on each of the faces to learn more about the E-Board!</p>
 	</div>
 	<div id="officerPics" class="col-md-6">
-		<div class="officer" ng-repeat="officer in officersGroup">			
-			<img ng-src="/eboard/{{officer.id}}.jpg" id="{{officer.id}}" class="img-responsive, img-thumbnail" data-toggle ="modal" data-target="#{{officer.id}}Modal"/>
-			<!-- <div class="description">
-				{{officer}}
-			</div> -->
-			<div class="modal fade" id="{{officer.id}}Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-				<div class="modal-dialog" role="document">
-			    	<div class="modal-content">
-			      		<div class="modal-header">
-			        		<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			        		<h4 class="modal-title" id="myModalLabel">{{officer.name}}, {{officer.role}}</h4>
-			      		</div>
-			      		<div class="modal-body row">
-			      			<div class="col-md-4">			      				
-			      				<img ng-src="/eboard/{{officer.id}}.jpg" class="img-responsive, img-thumbnail" />
-			      			</div>
-			      			<div class="col-md-8">
-			      				<p>
-			      					<b>Name:</b> {{officer.name}} <br />
-			      					<b>Position:</b> {{officer.role}} <br />
-			      					<b>Class:</b> {{officer.class}} <br />
-			      					<b>Major:</b> {{officer.major}} <br />
-			      					<b>Fun Fact:</b> {{officer.funFact}} <br />
-			      				</p>
-			      			</div>
-			      		</div>
-			      		<div class="modal-footer">
-			        		<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>			        
-			      		</div>
-			    	</div>
-			  	</div>
-			</div>
-		</div>
 	</div>	
 </div>
