restore angular just for this portion

--- a/app/assets/javascripts/static_pages.coffee.erb
+++ b/app/assets/javascripts/static_pages.coffee.erb
@@ -27,6 +27,8 @@ ready = ->
 		googleCalendarApiKey: 'AIzaSyCHI8YwUquGBULKNrqULHiYbN-YMtOOmjo'		
 		events: 
 			googleCalendarId: '3qeg0ij57jgh6k0crbmccl8q5s@group.calendar.google.com'
+	$('img').on 'click', ->
+		alert 'clicked!'
 # turbolinks treats everything like a single page -> compatible with regular page load and click links
 $(document).ready ready
 $(document).on 'page:load', ready
