angular works! url params are retrieved

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -18,8 +18,8 @@
 	       	<li class="dropdown">
 	       		<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">Events<span class="caret"></span></a>
 	       		<ul class="dropdown-menu">
-	       			<li><a href="#">Lunar Banquet</a></li>
-	       			<li><a href="#">Dumpling Night</a></li>
+	       			<li><a href="/events/lunar_banquet">Lunar Banquet</a></li>
+	       			<li><a href="/events/dumpling_night">Dumpling Night</a></li>
 	       		</ul>
 	       	</li>
 	       	<li><a href="/contact">Contact</a></li>
