--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -24,3 +24,4 @@ $font-family-sans-serif: 'Open Sans', sans-serif
 @import "vegas"
 @import "fullcalendar"
 @import "static_pages"
+@import "events_page"
