changed dropdown menu on front page

--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -9,7 +9,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body id="homePage">
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" id="indexBar">
 	<%= render 'layouts/menu' %>
 </nav>
 <div class="container-fluid">
