--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -14,6 +14,14 @@
 		}
 		a:visited {
 			color: #FFF;
+		}		
+	}
+	ul.dropdown-menu {
+		li {
+			a {
+				color: #000;
+				font-size: 18px;
+			}
 		}
 	}
 }
