added box shadow for pretty purposes

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -84,6 +84,7 @@ div#content {
 					margin-bottom: 5px;
 					margin-right: 5px;
 					cursor: move;
+					box-shadow: 1px 1px 1px #D5D5D5;
 				}
 				div.description {
 					display: none;
