--- a/app/assets/stylesheets/index_page.scss
+++ b/app/assets/stylesheets/index_page.scss
@@ -65,9 +65,10 @@ div#welcome_intro {
 
 	@media(max-width: 768px) {
 		h3 {
-			font-size: 30px;
+			font-size: 25px;
 		}
 		h1 {
+			margin-top: 10px;
 			font-size: 40px;
 		}
 	}
