move events pictures to center

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,7 +7,7 @@
 		padding-left: 10px;
 		padding-right: 10px;
 	}
-	div.officer {
+	div.officer, div.photoSet {
 		img {
 			margin-left: 15px;
 		}
