layout done and cover phones done

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div id="officersPage" class="row">
 	<div id="moreDetails" class="col-md-6 row">
-		<p>We are University of Maryland's chapter of the Chinese Student Association. Blah blah blah. Click on each of the faces to learn more about the E-Board!</p>
+		<p>We are University of Maryland's Chinese Student Association. The Chinese Student Association is established to provide all kinds of services and to foster closer relationships and cooperation among the Chinese students, faculty members, and other interested individuals at the University of Maryland. Our goal is to create cultural awareness and social opportunities by building a community within our school. We are committed to promote recreational activities, to provide tutoring services, to introduce Chinese culture to the students and faculty of the University of Maryland, and to provide assistance to incoming Chinese Students. Click on each of the icons to learn more about the E-Board!</p>
 	</div>
 	<div id="officerPics" class="col-md-6" ng-app="officersApp" ng-controller="officerCtrl">
 		<div class="officer" ng-repeat="officer in officersGroup">			
