--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -18,8 +18,12 @@
 	       	<li class="dropdown">
 	       		<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">Events<span class="caret"></span></a>
 	       		<ul class="dropdown-menu">
-	       			<li><a href="/events/lunar_banquet">Lunar Banquet</a></li>
+	       			<li><a href="/events/mooncake_festival">Mooncake Festival</a></li>
 	       			<li><a href="/events/dumpling_night">Dumpling Night</a></li>
+	       			<li><a href="/events/hotpot_night">Hotpot Night</a></li>	 
+	       			<li><a href="/events/lunar_banquet">Lunar Banquet</a></li>     
+	       			<li><a href="/events/cfest">CFest</a></li>
+	       			<li><a href="/events/basketball_tournament">Basketball Tournament</a></li>	       			 		
 	       		</ul>
 	       	</li>
 	       	<li><a href="/contact">Contact</a></li>
