--- a/app/views/static_pages/register.html.erb
+++ b/app/views/static_pages/register.html.erb
@@ -7,13 +7,13 @@
 	<div class="form-group">
 		<label for="name" class="col-sm-2 control-label">Name:</label>
 		<div class="col-sm-10">
-			<input type="text" class="form-control" id="name" placeholder="Jay Chou"/>
+			<input type="text" class="form-control" id="name" placeholder="Name"/>
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="email" class="col-sm-2 control-label">Email: </label>
 		<div class="col-sm-10">
-			<input type="email" class="form-control" id="email" placeholder="jay@jaychou.com" />
+			<input type="email" class="form-control" id="email" placeholder="name@email.com" />
 		</div>
 	</div>
 	<div class="form-group row">
