add credits, update events, and change registration name/email

--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -18,6 +18,7 @@
 	       	<li class="dropdown">
 	       		<a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="true" href="#">Events<span class="caret"></span></a>
 	       		<ul class="dropdown-menu">
+	       			<li><a href="/events/concessions">Concessions</a></li>
 	       			<li><a href="/events/mooncake_festival">Mooncake Festival</a></li>
 	       			<li><a href="/events/dumpling_night">Dumpling Night</a></li>
 	       			<li><a href="/events/hotpot_night">Hotpot Night</a></li>	 
