--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -15,6 +15,11 @@
 <div class="container-fluid">
 <%= yield %>
 </div>
+<footer class="footer left">
+	<!-- <div class="container left"> -->
+	<p>Photos by Chester Lam</p>
+	<!-- </div> -->
+</footer>
 <%= render 'layouts/footer' %>
 </body>
 </html>
